# bbg

./: .env.example  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
bbg-bot/: Cargo.toml
bbg-bot/src/: main.rs
bbg-core/: Cargo.toml
bbg-core/src/: lib.rs
bbg-core/src/imageops/: operations.rs
bbg-core/src/jobs/: mod.rs
bbg-core/src/tetrio/: mod.rs
cbg-bot/: Cargo.toml
cbg-bot/src/: main.rs  osu.rs
cbg-core/: Cargo.toml
cbg-core/src/: lib.rs  osu.rs
cbg-core/src/imageops/: mod.rs  operations.rs
cbg-core/src/jobs/: mod.rs  models.rs
cbg-core/src/tetrio/: mod.rs  tetrio.rs
src/: main.rs
