[workspace]
resolver = "3"
members = [
  "bbg-bot",
  "bbg-core",
]

# [package]
# name = "bbg"
# version = "2.0.0"
# edition = "2024"
# description = "mostly a shitpost of functions i created that MAY or MAY not return completely wrong values (check pi())"
# license = "AGPL-3.0-or-later"

# [dependencies]
# chrono = "0.4.42"
# dotenvy = "0.15.7"
# image = "0.25.8"
# nanohtml2text = "0.2.1"
# plotters = "0.3.7"
# poise = "0.6.1"
# rand = "0.9.2"
# reqwest = "0.12.23"
# serde = "1.0.228"
# serenity = "0.12"
# tetrio-api = "0.6.0"
# tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
