[workspace]
resolver = "3"
members = [
  "cbg-bot",
  "cbg-core",
]

[workspace.package]
description = "a discord bot (and library crate that can work without discord) that has the most random features but i mean its cool"
name = "cbg"
keywords = ["discord", "discord-bot"]
version = "3.1.1"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["pastaya"]
documentation = "https://docs.rs/cbg" # maybe?
homepage = "https://pastaya.net/cbg"

# [dependencies]
# chrono = "0.4.42"
# dotenvy = "0.15.7"
# image = "0.25.8"
# nanohtml2text = "0.2.1"
# plotters = "0.3.7"
# poise = "0.6.1"
# rand = "0.9.2"
# reqwest = "0.12.23"
# serde = "1.0.228"
# serenity = "0.12"
# tetrio-api = "0.6.0"
# tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
