[package]
name = "bbg-core"
version = "2.1.0" # make sure to follow semver!
edition = "2024"
description = "function shitpost (thats mean't to be used with bbg-bot)"
license = "AGPL-3.0-or-later"

[dependencies]
chrono = "0.4.42"
image = "0.25.8"
nanohtml2text = "0.2.1"
plotters = "0.3.7"
rand = "0.9.2"
reqwest = "0.12.23"
serde = "1.0.228"
serenity = { version = "0.12", optional = true }
tetrio-api = "0.6.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[features]
default = ["discord"]
discord = ["serenity"]

