[package]
name = "cbg-bot"
version = "3.2.0"
edition = "2024"
description = "the glue between cbg-core and discord"
license = "AGPL-3.0-or-later"

[dependencies]
chrono = "0.4.42"
dotenvy = "0.15.7"
poise = "0.6.1"
serenity = "0.12"
tetrio-api = "0.6.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
cbg-core = { path = "../cbg-core", version = "3.*.*"} # we use any version since its synced with bbg-bot anyways
